@startuml

title __POSITION's Class Diagram__\n

  package  {
    package servlets.Position {
      class EditPositionServlet {
          # doPost()
          # doGet()
      }
    }
  }
  

  package  {
    package servlets.Position {
      class PositionServlet {
          {static} - serialVersionUID : long
          # service()
          - verification()
      }
    }
  }
  

  EditPositionServlet -up-|> HttpServlet
  PositionServlet -up-|> HttpServlet


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
